--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'Emergency Ventilators'
 description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: '/emergency-ventilators/'
+baseurl: '/emergency-ventilators'
 disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
@@ -20,20 +20,20 @@ plugins:
   
 authors:
     sal:
-      name:           Sal
-      site:           https://www.wowthemes.net
+      name:           Amod Hulge
+      site:           https://www.qrera.in
       avatar:         /assets/images/avatar1.jpg
-      bio:            "Hi, I am Sal, the author of Mundana, the theme you're currently previewing. I hope you like it!"
-      email:          wowthemesnet@gmail.com
+      bio:            "Founder and Director, Qrera Technologies Pvt. Ltd."
+      email:          amod.hulge@qrera.in
       twitter:        https://twitter.com/wowthemesnet
 
     jane:
-      name:           Jane
-      site:           https://www.wowthemes.net
+      name:           Aditya Wagh
+      site:           http://www.adityawagh.com
       avatar:         /assets/images/avatar2.jpg
-      bio:            "Blogger, fashionista, love to explore new ideas and write on my morning coffee!"
-      email:          fakemail@gmail.com
-      twitter:        https://twitter.com/wowthemesnet
+      bio:            "Post-doctoral Researcher at Indian Institute of Science, Bangalore. Loves making machines and doing science!"
+      email:          waghaditya@gmail.com
+      twitter:        https://twitter.com/Aditya_A_Wagh
  
 # Defaults
 defaults:
